--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>amne</title>
+    <title>minimum-react-redux-firestore</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
